# acme

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/acme/: acme.h
include/acme/Eigen/: Cholesky.hxx  CholmodSupport.hxx  Dense.hxx  Eigen.hxx  Eigenvalues.hxx  Geometry.hxx  Householder.hxx  IterativeLinearSolvers.hxx  Jacobi.hxx  KLUSupport.hxx  LU.hxx  MetisSupport.hxx  OrderingMethods.hxx  PaStiXSupport.hxx  PardisoSupport.hxx  QR.hxx  QtAlignedMalloc.hxx  SPQRSupport.hxx  SVD.hxx  Sparse.hxx  SparseCholesky.hxx  SparseCore.hxx  SparseLU.hxx  SparseQR.hxx  StdDeque.hxx  StdList.hxx  StdVector.hxx  SuperLUSupport.hxx  UmfPackSupport.hxx
include/acme/internal/: AABBtree.hxx  aabb.hxx  ball.hxx  collection.hxx  collinear.hxx  coplanar.hxx  disk.hxx  intersection.hxx  line.hxx  none.hxx  orthogonal.hxx  parallel.hxx  plane.hxx  point.hxx  ray.hxx  segment.hxx  triangle.hxx  utilities.hxx
src/: AABBtree.cc  aabb.cc  ball.cc  collection.cc  collinear.cc  coplanar.cc  disk.cc  entity.cc  intersection.cc  line.cc  math.cc  none.cc  orthogonal.cc  parallel.cc  plane.cc  point.cc  ray.cc  segment.cc  triangle.cc  utilities.cc
test/: acme_test_00.cc  acme_test_01.cc  acme_test_02.cc  acme_test_03.cc  acme_test_04.cc  acme_test_05.cc  acme_test_06.cc  acme_test_07.cc  acme_test_08.cc  acme_test_09.cc  acme_test_10.cc  acme_test_11.cc  acme_test_12.cc  acme_test_13.cc  acme_test_14.cc  acme_test_15.cc  acme_test_16.cc  acme_test_17.cc  acme_test_18.cc  tests.cpp
